rbac-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-demo
spec:
  serviceAccountName: pod-reader-sa
  containers:
  - name: curl
    image: curlimages/curl:latest
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
      requests:
        memory: "32Mi"
        cpu: "100m"
    command:
        - sh
        - -c
        - |
          TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
          CACERT=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
          echo "==== list pods (allowed) ===="
          curl --silent --fail --cacert "$CACERT" \
            -H "Authorization: Bearer $TOKEN" \
            https://kubernetes.default.svc/api/v1/namespaces/default/pods | grep -o '"name":[^,}]*'
          echo
          echo "==== delete pod (should be forbidden) ===="
          curl --silent --fail --cacert "$CACERT" \
            -H "Authorization: Bearer $TOKEN" \
            -X DELETE \
            https://kubernetes.default.svc/api/v1/namespaces/default/pods/rbac-demo || echo "FORBIDDEN (as expected)"
          echo
          sleep 3600
