redis-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
spec:
  clusterIP: None
  selector:
    app: redis-stateful
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stateful
spec:
  selector:
    matchLabels:
      app: redis-stateful
  serviceName: redis-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stateful
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            - sh
            - -c
            - |
              exec redis-server \
                --requirepass "$REDIS_PASSWORD" \
                --appendonly yes \
                --dir /data
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: 
        - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
